--- a/.github/workflows/package-helm.yml
+++ b/.github/workflows/package-helm.yml
@@ -37,5 +37,5 @@ jobs:
         with:
           packages_with_index: true
           pages_branch: gh-pages
-        # env:
-        #   CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        env:
+          CR_TOKEN: "${{ secrets.CI_TOKEN }}"
