--- a/charts/frigate/templates/persistentvolume.yaml
+++ b/charts/frigate/templates/persistentvolume.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{- .Values.persistence.volumeName }}
+  name: {{ .Values.persistence.volumeName }}
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{- .Values.persistence.size }}
-  storageClassName: {{- .Values.persistence.storageClass }}
+      storage: {{ .Values.persistence.size }}
+  storageClassName: {{ .Values.persistence.storageClass }}
 {{- end }}
