--- a/charts/frigate/values.yaml
+++ b/charts/frigate/values.yaml
@@ -100,13 +100,13 @@ resources: {}
   #   memory: 128Mi
 
 livenessProbe:
-  httpGet:
-    path: /
-    port: http
+  # httpGet:
+  #   path: /
+  #   port: http
 readinessProbe:
-  httpGet:
-    path: /
-    port: http
+  # httpGet:
+  #   path: /
+  #   port: http
 
 autoscaling:
   enabled: false
