--- a/charts/twentycrm/templates/pvc-db.yaml
+++ b/charts/twentycrm/templates/pvc-db.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{- printf "%s-pvc" ( include "twentycrm.dbname" .) }}
+  labels:
+    {{- include "twentycrm.labels" . | nindent 4 }}
 spec:
   storageClassName: {{- default .Values.persistence.default.storageClass .Values.persistence.db.storageClass }}
   accessModes:
