--- a/charts/twentycrm/templates/pvc-docker-data.yaml
+++ b/charts/twentycrm/templates/pvc-docker-data.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{- printf "%s-docker-data-pvc" ( include "twentycrm.name" .) }}
+  labels:
+    {{- include "twentycrm.labels" . | nindent 4 }}
 spec:
   storageClassName: {{- default .Values.persistence.default.storageClass .Values.persistence.data.storageClass }}
   accessModes:
