--- a/charts/twentycrm/templates/service-server.yaml
+++ b/charts/twentycrm/templates/service-server.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "twentycrm.servername" . }}
+  labels:
+    {{- include "twentycrm.labels" . | nindent 4 }}
+    app.twentycrm/component: {{ include "twentycrm.servername" . }}
 spec:
   internalTrafficPolicy: Cluster
   ports:
@@ -10,7 +13,8 @@ spec:
       protocol: TCP
       targetPort: 3000
   selector:
-    app: {{ include "twentycrm.servername" . }}
+    {{- include "twentycrm.selectorLabels" . | nindent 4 }}
+    app.twentycrm/component: {{ include "twentycrm.servername" . }}
   sessionAffinity: ClientIP
   sessionAffinityConfig:
     clientIP:
