--- a/charts/twentycrm/templates/pvc-db.yaml
+++ b/charts/twentycrm/templates/pvc-db.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{- printf "%s-pvc" ( include "twentycrm.dbname" .) }}
+  name: {{ printf "%s-pvc" ( include "twentycrm.dbname" .) }}
   labels:
     {{- include "twentycrm.labels" . | nindent 4 }}
 spec:
-  storageClassName: {{- default .Values.persistence.default.storageClass .Values.persistence.db.storageClass }}
+  storageClassName: {{ default .Values.persistence.default.storageClass .Values.persistence.db.storageClass }}
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{- default .Values.persistence.default.size .Values.persistence.db.size }}
+      storage: {{ default .Values.persistence.default.size .Values.persistence.db.size }}
 {{- end }}
