--- a/charts/twentycrm/templates/deployment-db.yaml
+++ b/charts/twentycrm/templates/deployment-db.yaml
@@ -21,14 +21,14 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "twentycrm.labels" . | nindent 4 }}
+        {{- include "twentycrm.labels" . | nindent 8 }}
         app.twentycrm/component: {{ include "twentycrm.dbname" . }}
     spec:
       serviceAccountName: {{ include "twentycrm.serviceAccountName" . }}
       volumes:
-        - name: {{- printf "%s-data" ( include "twentycrm.dbname" .) }}
+        - name: {{ printf "%s-data" ( include "twentycrm.dbname" .) }}
           persistentVolumeClaim:
-            claimName: {{- printf "%s-pvc" ( include "twentycrm.dbname" .) }}
+            claimName: {{ printf "%s-pvc" ( include "twentycrm.dbname" .) }}
       containers:
         - name: postgres
           image: {{ .Values.postgresql.image }}
@@ -49,7 +49,7 @@ spec:
           tty: true
           volumeMounts:
             - mountPath: /home/postgres/pgdata
-              name: {{- printf "%s-data" ( include "twentycrm.dbname" .) }}
+              name: {{ printf "%s-data" ( include "twentycrm.dbname" .) }}
       dnsPolicy: ClusterFirst
       restartPolicy: Always
 {{- end }}
