--- a/charts/twentycrm/templates/pvc-server.yaml
+++ b/charts/twentycrm/templates/pvc-server.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{- printf "%s-pvc" ( include "twentycrm.servername" .) }}
+  name: {{ printf "%s-pvc" ( include "twentycrm.servername" .) }}
   labels:
     {{- include "twentycrm.labels" . | nindent 4 }}
 spec:
-  storageClassName: {{- default .Values.persistence.default.storageClass .Values.persistence.server.storageClass }}
+  storageClassName: {{ default .Values.persistence.default.storageClass .Values.persistence.server.storageClass }}
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{- default .Values.persistence.default.size .Values.persistence.server.size }}
+      storage: {{ default .Values.persistence.default.size .Values.persistence.server.size }}
