* add volumes helpers * add initContainer * upgrade service * add pvc * add strategies cm * add strategies to local path in this chart sources

--- a/charts/freqtrade/templates/configs.yaml
+++ b/charts/freqtrade/templates/configs.yaml
@@ -64,6 +64,7 @@ data:
       "internals": {
         "process_throttle_secs": 2
       },
+      "user_data_dir": "user_data",
       "add_config_files": [
         "config-pairs.json",
         "config-telegram.json",
