--- a/charts/freqtrade/templates/service.yaml
+++ b/charts/freqtrade/templates/service.yaml
@@ -6,10 +6,18 @@ metadata:
     {{- include "freqtrade.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
+  {{- with .Values.service.ports.main }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+    - port: {{ .port }}
+      targetPort: {{ .targetPort | default .port }}
+      protocol: {{ .protocol | default "TCP" }}
+      name: {{ .name | default "main" }}
+  {{- end }}
+  {{- range .Values.service.ports.extra }}
+    - port: {{ .port }}
+      targetPort: {{ .targetPort | default .port }}
+      protocol: {{ .protocol | default "TCP" }}
+      name: {{ .name | default "" }}
+  {{- end }}
   selector:
     {{- include "freqtrade.selectorLabels" . | nindent 4 }}
