--- a/charts/freqtrade/templates/tests/test-connection.yaml
+++ b/charts/freqtrade/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "freqtrade.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "freqtrade.fullname" . }}:{{ .Values.service.ports.main.port }}']
   restartPolicy: Never
