--- a/charts/freqtrade/templates/configs.yaml
+++ b/charts/freqtrade/templates/configs.yaml
@@ -26,7 +26,10 @@ data:
       }
       {{- end }}
     }
-  config-telegram.json: {{ toJson .Values.telegram }}
+  config-telegram.json: |
+    {
+      "telegram": {{ toPrettyJson .Values.telegram | indent 8 }}
+    }
   config.json: |
     {
       {{- with .Values.config }}
@@ -65,6 +68,11 @@ data:
         "process_throttle_secs": 2
       },
       "user_data_dir": "user_data",
+      {{- if and .dbEnabled .dryRun }}
+      "db_url": "sqlite:///user_data/tradesv3.dry_run.sqlite",
+      {{- else if .dbEnabled }}
+      "db_url": "sqlite:///user_data/tradesv3.sqlite",
+      {{- end }}
       "add_config_files": [
         "config-pairs.json",
         "config-telegram.json",
