--- a/charts/freqtrade/templates/pvc.yaml
+++ b/charts/freqtrade/templates/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{- include "freqtrade.fullname" . }}-user-data
+  name: {{ include "freqtrade.fullname" . }}-user-data
   labels:
     {{- include "freqtrade.labels" . | nindent 4 }}
   {{- with .Values.pvc.annotations }}
